# scrcpy_techx

./: auto_build.sh  auto_build_all.sh
server/: meson.build
server/scripts/: build-wrapper.sh
server/src/main/java/com/genymobile/scrcpy/: AndroidVersions.java
